--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -1,9 +1,10 @@
 {
-  "name":"node-backend",
-  "version":"1.0.0",
-  "main":"index.js",
+  "name": "node-backend",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
     "axios": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.0"
   },
   "scripts": {
